/* Praznikad om Mad'jaranmas */ I don't understand. Please write about them in English, with clear dates...

--- a/Mad'jaranma.mw
+++ b/Mad'jaranma.mw
@@ -43,7 +43,7 @@ Regionad:
 * [[Suvial'föl'd]]
 * [[Suvidunajantagaine rand]]
 
-== Praznikad om Mad'jaranmas ==
+<!--== Praznikad om Mad'jaranmas ==
 * 01. [[Viluku]] - [[Uz' voz']]
 * 15. [[Keväz'ku]] - Mad'jaranman rahvahan praznik
 * [[Äipäiv]]
@@ -53,6 +53,7 @@ Regionad:
 * 23. Reduku - Mad'jaranman rahvahan praznik
 * 01. Kül'mku - Pühak päiv
 * 25-26. Tal'vku - Raštvad
+-->
 
 == Eläjad ==
 
