*Empty MediaWiki Message*

--- a/Eger_(lidn).mw
+++ b/Eger_(lidn).mw
@@ -1,3 +1,22 @@
-'''Eger''' ( [[Mad'jaran kel'|mad'j]].: Eger) om lidn [[Heveš (agj)|Heveš agjas]]. Se om  Heveš agjan administrativine da kul'turine keskuz. Eläjiden lugu om läz 54 867 rist.
+{{Eländpunkt
+ | Nimi = Eger<br />Eger<br />Erlau<br />Jáger<br />Agria<br />Eğri<br />Jagier<br />Jager<br />Јегра / Jegra
+ | Lidnanznam = HUN Eger COA.jpg
+ | Flag = 
+ | Lidnanznam text = Egeran lidnanznam
+ | Flag text = 
+ | Valdkund = Mad'jaranma
+ | Eläjiden lugu = 56,530
+ | Voz' = 2011
+ | Pind = 92
+ | Fail = Eger-latkep-vzs.jpg
+ | Pämez' = Laslo Habiš
+ | Telefonkod = +36-36
+ | Aigvö = [[UTC]]+2
+}}
+'''Eger''' ([[Mad'jaran kel'|mad'j.]]: ''Eger'', [[Saksan kel'|saks.]]: ''Erlau'', [[slovakijan kel'|slovak.]]: ''Jáger'', [[latinan kel'|lat.]]: ''Agria'', [[turkan kel'|turk.]]: ''Eğri'', [[pol'šan kel'|pol'š.]]: ''Jagier'', [[čehan kel'|čeh.]]: ''Jager'', [[serbijan kel'|serb.]]: ''Јегра / Jegra'') om lidn [[Mad'jaranma]]s, [[Heveš (agj)|Heveš-agjan]] pälidn.
 
-Pind om läz 92.24 km².
+Eläjiden lugu om 56,530 ristitud (2011), a pind — 92 km<sup>2</sup> läz.
+{{stub}}
+
+[[Kategorii:Serbijan lidnad]]
+[[Kategorii:Eländpunktad kirjamišton mödhe]]
