*Empty MediaWiki Message*

--- a/Eger_(lidn).mw
+++ b/Eger_(lidn).mw
@@ -16,6 +16,9 @@
 '''Eger''' ([[Mad'jaran kel'|mad'j.]]: ''Eger'', [[Saksan kel'|saks.]]: ''Erlau'', [[slovakijan kel'|slovak.]]: ''Jáger'', [[latinan kel'|lat.]]: ''Agria'', [[turkan kel'|turk.]]: ''Eğri'', [[pol'šan kel'|pol'š.]]: ''Jagier'', [[čehan kel'|čeh.]]: ''Jager'', [[serbijan kel'|serb.]]: ''Јегра / Jegra'') om lidn [[Mad'jaranma]]s, [[Heveš (agj)|Heveš-agjan]] pälidn.
 
 Eläjiden lugu om 56,530 ristitud (2011), a pind — 92 km<sup>2</sup> läz.
+
+== Sebruzlidnad ==
+
 {{stub}}
 
 [[Kategorii:Serbijan lidnad]]
