--- a/Eger_(lidn).mw
+++ b/Eger_(lidn).mw
@@ -21,5 +21,5 @@ Eläjiden lugu om 56,530 ristitud (2011), a pind — 92 km<sup>2</sup> läz.
 
 {{stub}}
 
-[[Kategorii:Serbijan lidnad]]
+[[Kategorii:Mad'jaranman lidnad]]
 [[Kategorii:Eländpunktad kirjamišton mödhe]]
