*Empty MediaWiki Message*

--- a/Eger_(lidn).mw
+++ b/Eger_(lidn).mw
@@ -18,7 +18,18 @@
 Eläjiden lugu om 56,530 ristitud (2011), a pind — 92 km<sup>2</sup> läz.
 
 == Sebruzlidnad ==
-
+* [[Fail:Flag of Slovakia.svg|border|23px]] [[Dol'ni Kubin]], [[Slovakii]]
+* [[Fail:Flag of Russia.svg|border|23px]] [[Čeboksarad]], [[Venäma]]
+* [[Fail:Flag of Germany.svg|border|23px]] [[Esslingen Nekkaral]], [[Saksanma]]
+* [[Fail:Flag of United States.svg|border|23px]] [[Geinsvill (Džordžii)]], [[AÜV]]
+* [[Fail:Flag of Romania.svg|border|23px]] [[Georgeni]], [[Romanii]]
+* [[Fail:Flag of Palestine.svg|border|23px]] [[Jerihon]], [[Palestin]]
+* [[Fail:Flag of the Czech Republic.svg|border|23px]] [[Kutna Hor]], [[Čehanma]]
+* [[Fail:Flag of France.svg|border|23px]] [[Makon]], [[Francii]]
+* [[Fail:Flag of Turkey.svg|border|23px]] [[Pamukkale]], [[Turcii]]
+* [[Fail:Flag of Finland.svg|border|23px]] [[Pori]], [[Suomenma]]
+* [[Fail:Flag of Poland.svg|border|23px]] [[Pšemisl']], [[Pol'šanma]]
+* [[Fail:Flag of Italii.svg|border|23px]] [[Sarcan]], [[Italii]]
 {{stub}}
 
 [[Kategorii:Mad'jaranman lidnad]]
