*Empty MediaWiki Message*

--- a/Eger_(lidn).mw
+++ b/Eger_(lidn).mw
@@ -29,7 +29,7 @@ Eläjiden lugu om 56,530 ristitud (2011), a pind — 92 km<sup>2</sup> läz.
 * [[Fail:Flag of Turkey.svg|border|23px]] [[Pamukkale]], [[Turcii]]
 * [[Fail:Flag of Finland.svg|border|23px]] [[Pori]], [[Suomenma]]
 * [[Fail:Flag of Poland.svg|border|23px]] [[Pšemisl']], [[Pol'šanma]]
-* [[Fail:Flag of Italii.svg|border|23px]] [[Sarcan]], [[Italii]]
+* [[Fail:Flag of Italy.svg|border|23px]] [[Sarcan]], [[Italii]]
 {{stub}}
 
 [[Kategorii:Mad'jaranman lidnad]]
