*Empty MediaWiki Message*

--- a/Pešt_(agj).mw
+++ b/Pešt_(agj).mw
@@ -1,4 +1,5 @@
-'''Pešt-agj''' ([[Mad'jaran kel'|mad'j]].: ''Pest megye'') om üks' [[Mad'jaranma]]n agjoišpäi.
+'''Pešt-agj''' ([[Mad'jaran kel'|mad'j]].: ''Pest megye'') om üks' [[Mad'jaranma]]n agjoišpäi. Mad'jaranman pälidn da kaikiš suremb lidn om [[Budapešt]].
+
 
 == Administrativine jagand ==
 
