*Empty MediaWiki Message*

--- a/Sabol'č_Satmar_Bereg.mw
+++ b/Sabol'č_Satmar_Bereg.mw
@@ -1,4 +1,4 @@
-'''Sabol'č Satmar Bereg-agj''' ([[Mad'jaran kel'|mad'j]].: ''Szabolcs-Szatmár-Bereg megye'') om üks' [[Mad'jaranma]]n agjoišpäi. Sabol'č Satmar Beregan kaikiš suremb lidn om [[N'jired'haz]].
+'''Sabol'č Satmar Bereg-agj''' ([[Mad'jaran kel'|mad'j]].: ''Szabolcs-Szatmár-Bereg megye'') om üks' [[Mad'jaranma]]n agjoišpäi. Sabol'č Satmar Bereg-agjan administrativine keskuz da kaikiš suremb lidn om [[N'jired'haz]].
 
 == Administrativine jagand ==
 
