--- a/Bač_Kiškun.mw
+++ b/Bač_Kiškun.mw
@@ -1,4 +1,4 @@
-'''Bač Kiškun''' ([[Mad'jaran kel'|mad'j]].: ''Bács-Kiskun megye'') om üks' [[Mad'jaranma]]n agjoišpäi. Bač Kiškunan kaikiš suremb lidn om [[Kečkemet]].
+'''Bač Kiškun''' ([[Mad'jaran kel'|mad'j]].: ''Bács-Kiskun megye'') om üks' [[Mad'jaranma]]n agjoišpäi. Bač Kiškun-agjan administrativine keskuz da kaikiš suremb lidn om [[Kečkemet]].
 
 == Administrativine jagand ==
 
