*Empty MediaWiki Message*

--- a/Boršod_Abaui_Zemplen.mw
+++ b/Boršod_Abaui_Zemplen.mw
@@ -1,4 +1,4 @@
-'''Boršod Abaui Zemplen''' ([[Mad'jaran kel'|mad'j]].: ''Borsod-Abaúj-Zemplen megye'') om üks' [[Mad'jaranma]]n agjoišpäi.
+'''Boršod Abaui Zemplen''' ([[Mad'jaran kel'|mad'j]].: ''Borsod-Abaúj-Zemplen megye'') om üks' [[Mad'jaranma]]n agjoišpäi. Boršod Abaui Zemplen-agjan administrativine keskuz da kaikiš suremb lidn om [[Miškolc]].
 
 == Administrativine jagand ==
 
