*Empty MediaWiki Message*

--- a/Debrecen.mw
+++ b/Debrecen.mw
@@ -1,5 +1,5 @@
 {{Eländpunkt
- | Nimi = Debrecen<br />Eger<br />Debrezin<br />Debrecín<br />Debretinum<br />Debrecen<br />Debreczyn<br />Debrecín<br />Дебрецин / Debrecin
+ | Nimi = Debrecen<br />Debrecen<br />Debrezin<br />Debrecín<br />Debretinum<br />Debrecen<br />Debreczyn<br />Debrecín<br />Дебрецин / Debrecin
  | Lidnanznam = Coa Hungary Town Debrecen.svg
  | Flag = Bandera de Debrecen.svg
  | Lidnanznam text = Debrecenan lidnanznam
