--- a/Debrecen.mw
+++ b/Debrecen.mw
@@ -32,6 +32,8 @@ Eläjiden lugu om 207,594 ristitud (2012), a pind — 461 km<sup>2</sup> läz. N
 * [[Fail:Flag of Bulgaria.svg|border|23px]] [[Sumen]], [[Bolgarii]]
 * [[Fail:Flag of Taiwan.svg|border|23px]] [[Tajtung]], [[Taivan]]
 * [[Fail:Flag of China.svg|border|23px]] [[Tongliao]], [[Kitai]]
+
+[[Fail:Debrecen testvérvárosai.JPG|pisi|oiged|Sebruzlidnad om Debrecen]]
 {{stub}}
 
 [[Kategorii:Mad'jaranman lidnad]]
