--- a/Miškol'c.mw
+++ b/Miškol'c.mw
@@ -1,5 +1,5 @@
 {{Eländpunkt
- | Nimi = Miškolc<br />Miskolc<br />Miskolc<br />Miškovec<br />Miskolc<br />Miskolc<br />Miszkolc<br />Miskolc<br />Мишколц / Miškolc
+ | Nimi = Miškolc<br />Miskolc<br />Miškovec
  | Lidnanznam = Miskolc COA.png
  | Flag = 
  | Lidnanznam text = Miškolcan lidnanznam
@@ -13,7 +13,7 @@
  | Telefonkod = +36-36
  | Aigvö = [[UTC]]+2
 }}
-'''Miškolc''' ([[Mad'jaran kel'|mad'j.]]: ''Miskolc'', [[Saksan kel'|saks.]]: ''Miskolc'', [[slovakijan kel'|slovak.]]: ''Miškovec'', [[latinan kel'|lat.]]: ''Miskolc'', [[turkan kel'|turk.]]: ''Miskolc'', [[pol'šan kel'|pol'š.]]: ''Miszkolc'', [[čehan kel'|čeh.]]: ''Miskolc'', [[serbijan kel'|serb.]]: ''Мишколц / Miškolc'') om lidn [[Mad'jaranma]]s, [[Boršod Abaui Zemplen|Boršod Abaui Zemplen-agjan]] pälidn.
+'''Miškolc''' ([[Mad'jaran kel'|mad'j.]]: ''Miskolc'', [[slovakijan kel'|slovak.]]: ''Miškovec'') om lidn [[Mad'jaranma]]s, [[Boršod Abaui Zemplen|Boršod Abaui Zemplen-agjan]] pälidn.
 
 Eläjiden lugu om 162,905 ristitud (2013), a pind — 236 km<sup>2</sup> läz. Nügüd'läine lidnan pämez' om Kriza Akoš.
 
