--- a/Golub_Marina.mw
+++ b/Golub_Marina.mw
@@ -1,3 +1,4 @@
+[[File:Marina Golub-22-4! by Alexey Nikishin 1.jpg|250 px|right|thumb|Marina Golub, 2011]]
 '''Marina Grigor'jevna Golub''' ([[venäkel'|ven.]]: ''Марина Григорьевна Голуб''; sünd. [[10. tal'vku]] [[1957]], [[Moskv]], [[Venäma]] ([[NSTÜ]]) — kol. [[9. reduku]] [[2012]]) oli nevondkundaline i venälaine aktör da TV-vedai.
 {{stub}}
 
