*Empty MediaWiki Message*

--- a/Miškol'c.mw
+++ b/Miškol'c.mw
@@ -1,8 +1,8 @@
 {{Eländpunkt
- | Nimi = Miškolc<br />Miskolc<br />Miškovec
+ | Nimi = Miškol'c<br />Miskolc<br />Miškovec
  | Lidnanznam = Miskolc COA.png
  | Flag = 
- | Lidnanznam text = Miškolcan lidnanznam
+ | Lidnanznam text = Miškol'can lidnanznam
  | Flag text = 
  | Valdkund = Mad'jaranma
  | Eläjiden lugu = 162,905
@@ -13,7 +13,7 @@
  | Telefonkod = +36-36
  | Aigvö = [[UTC]]+2
 }}
-'''Miškolc''' ([[Mad'jaran kel'|mad'j.]]: ''Miskolc'', [[slovakijan kel'|slovak.]]: ''Miškovec'') om lidn [[Mad'jaranma]]s, [[Boršod Abaui Zemplen|Boršod Abaui Zemplen-agjan]] pälidn.
+'''Miškol'c''' ([[Mad'jaran kel'|mad'j.]]: ''Miskolc'', [[slovakijan kel'|slovak.]]: ''Miškovec'') om lidn [[Mad'jaranma]]s, [[Boršod Abaui Zemplen|Boršod Abaui Zemplen-agjan]] pälidn.
 
 Eläjiden lugu om 162,905 ristitud (2013), a pind — 236 km<sup>2</sup> läz. Nügüd'läine lidnan pämez' om Kriza Akoš.
 
@@ -30,8 +30,6 @@ Eläjiden lugu om 162,905 ristitud (2013), a pind — 236 km<sup>2</sup> läz. N
 * [[Fail:Flag of France.svg|border|23px]] [[Valenciennes]], [[Francii]]
 * [[Fail:Flag of Russia.svg|border|23px]] [[Vologd]], [[Venäma]]
 * [[Fail:Flag of China.svg|border|23px]] [[Baotou]], [[Kitai]]
-
-
 {{stub}}
 
 [[Kategorii:Mad'jaranman lidnad]]
