*Empty MediaWiki Message*

--- a/Pešt_(agj).mw
+++ b/Pešt_(agj).mw
@@ -1,5 +1,4 @@
-'''Pešt-agj''' ([[Mad'jaran kel'|mad'j]].: ''Pest megye'') om üks' [[Mad'jaranma]]n agjoišpäi. Mad'jaranman pälidn da kaikiš suremb lidn om [[Budapešt]].
-
+'''Pešt-agj''' ([[Mad'jaran kel'|mad'j]].: ''Pest megye'') om üks' [[Mad'jaranma]]n agjoišpäi. Pešt-agjan keskuz om Mad'jaranman pälidn [[Budapešt]].
 
 == Administrativine jagand ==
 
