*Empty MediaWiki Message*

--- a/Boršod_Abaui_Zemplen.mw
+++ b/Boršod_Abaui_Zemplen.mw
@@ -1,4 +1,4 @@
-'''Boršod Abaui Zemplen''' ([[Mad'jaran kel'|mad'j]].: ''Borsod-Abaúj-Zemplen megye'') om üks' [[Mad'jaranma]]n agjoišpäi. Boršod Abaui Zemplen-agjan administrativine keskuz da kaikiš suremb lidn om [[Miškolc]].
+'''Boršod Abaui Zemplen''' ([[Mad'jaran kel'|mad'j]].: ''Borsod-Abaúj-Zemplen megye'') om üks' [[Mad'jaranma]]n agjoišpäi. Boršod Abaui Zemplen-agjan administrativine keskuz da kaikiš suremb lidn om [[Miškol'c]].
 
 == Administrativine jagand ==
 
@@ -17,7 +17,7 @@ Siš agjas om 27 lidnad:
 * [[Mezöčat]] (''Mezőcsát'')
 * [[Mezökövešd]] (''Mezőkövesd'')
 * [[Mezökeresteš]] (''Mezőkeresztes'')
-* [[Miškolc]] (''Miskolc'') — agjan administrativine keskuz
+* [[Miškol'c]] (''Miskolc'') — agjan administrativine keskuz
 * [[N'jekladhaz]] (''Nyékládháza'')
 * [[Ong]] (''Onga'')
 * [[Ozd]] (''Ózd'')
