--- a/Miškol'c.mw
+++ b/Miškol'c.mw
@@ -5,29 +5,29 @@
  | Lidnanznam text = Miškol'can lidnanznam
  | Flag text = 
  | Valdkund = Mad'jaranma
- | Eläjiden lugu = 162,905
- | Voz' = 2013
- | Pind = 236
+ | Eläjiden lugu = 167,754
+ | Voz' = 2011
+ | Pind = 84
  | Fail = Miskolc montage.JPG
  | Pämez' = Kriza Akoš
- | Telefonkod = +36-36
+ | Telefonkod = +36-46
  | Aigvö = [[UTC]]+2
 }}
 '''Miškol'c''' ([[Mad'jaran kel'|mad'j.]]: ''Miskolc'', [[slovakijan kel'|slovak.]]: ''Miškovec'') om lidn [[Mad'jaranma]]s, [[Boršod Abaui Zemplen|Boršod Abaui Zemplen-agjan]] pälidn.
 
-Eläjiden lugu om 162,905 ristitud (2013), a pind — 236 km<sup>2</sup> läz. Nügüd'läine lidnan pämez' om Kriza Akoš.
+Eläjiden lugu om 167,754 ristitud (2011), a pind — 84 km<sup>2</sup> läz. Nügüd'läine lidnan pämez' om Kriza Akoš.
 
 == Sebruzlidnad ==
-* [[Fail:Flag of Germany.svg|border|23px]] [[ Aschaffenburg]], [[Saksanma]]
-* [[Fail:Flag of South Korea.svg|border|23px]] [[Asan]], [[Suv Korea]]
+* [[Fail:Flag of Germany.svg|border|23px]] [[Ašaffenburg]], [[Saksanma]]
+* [[Fail:Flag of South Korea.svg|border|23px]] [[Asan]], [[Korejan Tazovaldkund]]
 * [[Fail:Flag of Bulgaria.svg|border|23px]] [[Burgas]], [[Bolgarii]]
-* [[Fail:Flag of the United States.svg|border|23px]] [[Cleveland]], [[Amerikan Ühtenzoittud Valdkundad|AÜV]]
+* [[Fail:Flag of the United States.svg|border|23px]] [[Klivlend]], [[Amerikan Ühtenzoittud Valdkundad|AÜV]]
 * [[Fail:Flag of Slovakia.svg|border|23px]] [[Košice]], [[Slovakii]]
-* [[Fail:Flag of Poland.svg|border|23px]] [[Katowice]], [[Pol'šanma]]
-* [[Fail:Flag of Turkey.svg|border|23px]] [[Kai'šeri]], [[Turcii]]
-* [[Fail:Flag of the Czech Republic.svg|border|23px]] [[Ostrava]], [[Čehanma]]
-* [[Fail:Flag of Finland.svg|border|23px]] [[Tampere]], [[Suomenma]]
-* [[Fail:Flag of France.svg|border|23px]] [[Valenciennes]], [[Francii]]
+* [[Fail:Flag of Poland.svg|border|23px]] [[Katovice]], [[Pol'šanma]]
+* [[Fail:Flag of Turkey.svg|border|23px]] [[Kaišeri]], [[Turcii]]
+* [[Fail:Flag of the Czech Republic.svg|border|23px]] [[Ostrav]], [[Čehanma]]
+* [[Fail:Flag of Finland.svg|border|23px]] [[Tampereh]], [[Suomenma]]
+* [[Fail:Flag of France.svg|border|23px]] [[Valans'jen]], [[Francii]]
 * [[Fail:Flag of Russia.svg|border|23px]] [[Vologd]], [[Venäma]]
 * [[Fail:Flag of China.svg|border|23px]] [[Baotou]], [[Kitai]]
 {{stub}}
