--- a/Kečkemet.mw
+++ b/Kečkemet.mw
@@ -1,5 +1,5 @@
 {{Eländpunkt
- | Nimi = Kečkemet<br />Kecskemét<br />Kecskemét<br />Kecskemét<br />Aegopolis<br /><br />Kecskemét<br />Kecskemét<br />Кечкемет / Kečkemet
+ | Nimi = Kečkemet<br />Kecskemét<br />Aegopolis
  | Lidnanznam = Coa Hungary Town Kecskemét.svg 
  | Flag = Flag Hungary Town Kecskemét.svg
  | Lidnanznam text = Kečkemetan lidnanznam
@@ -9,11 +9,11 @@
  | Voz' = 2012
  | Pind = 322
  | Fail = Cifra Palota.jpg
- | Pämez' = Dr. Zombor Gabor
+ | Pämez' = Zombor Gabor
  | Telefonkod = +36-36
  | Aigvö = [[UTC]]+2
 }}
-'''Kečkemet''' ([[Mad'jaran kel'|mad'j.]]: ''Kecskemét'', [[Saksan kel'|saks.]]: ''Kecskemét'', [[slovakijan kel'|slovak.]]: ''Kecskemét'', [[latinan kel'|lat.]]: ''Aegopolis'', [[turkan kel'|turk.]]: ''Kecskemét'', [[pol'šan kel'|pol'š.]]: ''Kecskemét'', [[čehan kel'|čeh.]]: ''Kecskemét'', [[serbijan kel'|serb.]]: ''Кечкемет / Miškolc'') om lidn [[Mad'jaranma]]s, [[Bač Kiškun|Bač Kiškun-agjan]] pälidn.
+'''Kečkemet''' ([[Mad'jaran kel'|mad'j.]]: ''Kecskemét'', [[latinan kel'|lat.]]: ''Aegopolis'') om lidn [[Mad'jaranma]]s, [[Bač Kiškun|Bač Kiškun-agjan]] pälidn.
 
 Eläjiden lugu om 114,226 ristitud (2012), a pind — 322 km<sup>2</sup> läz. Nügüd'läine lidnan pämez' om Dr. Zombor Gabor.
 
