--- a/Kečkemet.mw
+++ b/Kečkemet.mw
@@ -7,15 +7,15 @@
  | Valdkund = Mad'jaranma
  | Eläjiden lugu = 114,226
  | Voz' = 2012
- | Pind = 322
+ | Pind = 32
  | Fail = Cifra Palota.jpg
  | Pämez' = Zombor Gabor
- | Telefonkod = +36-36
+ | Telefonkod = +36-76
  | Aigvö = [[UTC]]+2
 }}
 '''Kečkemet''' ([[Mad'jaran kel'|mad'j.]]: ''Kecskemét'', [[latinan kel'|lat.]]: ''Aegopolis'') om lidn [[Mad'jaranma]]s, [[Bač Kiškun|Bač Kiškun-agjan]] pälidn.
 
-Eläjiden lugu om 114,226 ristitud (2012), a pind — 322 km<sup>2</sup> läz. Nügüd'läine lidnan pämez' om Dr. Zombor Gabor.
+Eläjiden lugu om 114,226 ristitud (2012), a pind — 32 km<sup>2</sup> läz. Nügüd'läine lidnan pämez' om Zombor Gabor.
 
 == Sebruzlidnad ==
 * [[Fail:Flag of Japan.svg|border|23px]] [[Aomori]], [[Japonii]]
