--- a/Debrecen.mw
+++ b/Debrecen.mw
@@ -1,5 +1,5 @@
 {{Eländpunkt
- | Nimi = Debrecen<br />Debrecen<br />Debrezin<br />Debrecín<br />Debretinum<br />Debrecen<br />Debreczyn<br />Debrecín<br />Дебрецин / Debrecin
+ | Nimi = Debrecen<br />Debrecen<br />Debrezin<br />Debrecín<br />Debretinum<br />Debreczyn<br />Debrecín<br />Дебрецин / Debrecin
  | Lidnanznam = Coa Hungary Town Debrecen.svg
  | Flag = Bandera de Debrecen.svg
  | Lidnanznam text = Debrecenan lidnanznam
@@ -8,20 +8,21 @@
  | Eläjiden lugu = 207,594
  | Voz' = 2012
  | Pind = 461
- | Fail = Debrecen montage.JPG
- | Pämez' = Koša Laioš
- | Telefonkod = +36-36
+ | Fail = Debrecen látképe.jpg
+ | Pämez' = Koša Lajoš
+ | Telefonkod = +36-52
  | Aigvö = [[UTC]]+2
 }}
-'''Debrecen''' ([[Mad'jaran kel'|mad'j.]]: ''Debrecen'', [[Saksan kel'|saks.]]: ''Debrezin'', [[slovakijan kel'|slovak.]]: ''Debrecín'', [[latinan kel'|lat.]]: ''Debretinum'', [[turkan kel'|turk.]]: ''Debrecen'', [[pol'šan kel'|pol'š.]]: ''Debreczyn'', [[čehan kel'|čeh.]]: ''Debrecín'', [[serbijan kel'|serb.]]: ''Дебрецин / Debrecin'') om lidn [[Mad'jaranma]]s, [[Haidu Bihar-agjan]] pälidn.
+'''Debrecen''' ([[Mad'jaran kel'|mad'j.]]: ''Debrecen'', [[Saksan kel'|saks.]]: ''Debrezin'', [[slovakijan kel'|slovak.]]: ''Debrecín'', [[latinan kel'|lat.]]: ''Debretinum'', [[pol'šan kel'|pol'š.]]: ''Debreczyn'', [[čehan kel'|čeh.]]: ''Debrecín'', [[serbijan kel'|serb.]]: ''Дебрецин / Debrecin'') om lidn [[Mad'jaranma]]s, [[Haidu Bihar]]-agjan pälidn.
 
-Eläjiden lugu om 207,594 ristitud (2012), a pind — 461 km<sup>2</sup> läz. Nügüd'läine lidnan pämez' om Koša Laioš.
+Eläjiden lugu om 207,594 ristitud (2012), a pind — 461 km<sup>2</sup> läz. Nügüd'läine lidnan pämez' om Koša Lajoš.
 
 == Sebruzlidnad ==
+[[Fail:Debrecen testvérvárosai.JPG|thumbnail|left|250px|Debrecenan sebruzlidnoiden teznam]]
 * [[Fail:Flag of Italy.svg|border|23px]] [[Cattolica]], [[Italii]]
 * [[Fail:Flag of China.svg|border|23px]] [[Čungking]], [[Kitai]]
 * [[Fail:Flag of Finland.svg|border|23px]] [[Jyväskylä]], [[Suomenma]]
-* [[Fail:Flag of Lithuania.svg|border|23px]] [[Klaipėda]], [[Litvanma]]
+* [[Fail:Flag of Lithuania.svg|border|23px]] [[Klaiped]], [[Litvanma]]
 * [[Fail:Flag of Poland.svg|border|23px]] [[Lüblin]], [[Pol'šanma]]
 * [[Fail:Flag of the United States.svg|border|23px]] [[New Brunswick]], [[Amerikan Ühtenzoittud Valdkundad|AÜV]]
 * [[Fail:Flag of Romania.svg|border|23px]] [[Oradera]], [[Romanii]]
@@ -33,7 +34,6 @@ Eläjiden lugu om 207,594 ristitud (2012), a pind — 461 km<sup>2</sup> läz. N
 * [[Fail:Flag of Taiwan.svg|border|23px]] [[Tajtung]], [[Taivan]]
 * [[Fail:Flag of China.svg|border|23px]] [[Tongliao]], [[Kitai]]
 
-[[Fail:Debrecen testvérvárosai.JPG|pisi|oiged|Sebruzlidnad om Debrecen]]
 {{stub}}
 
 [[Kategorii:Mad'jaranman lidnad]]
