*Empty MediaWiki Message*

--- a/Debrecen.mw
+++ b/Debrecen.mw
@@ -19,21 +19,20 @@ Eläjiden lugu om 207,594 ristitud (2012), a pind — 461 km<sup>2</sup> läz. N
 
 == Sebruzlidnad ==
 [[Fail:Debrecen testvérvárosai.JPG|thumbnail|left|250px|Debrecenan sebruzlidnoiden teznam]]
-* [[Fail:Flag of Italy.svg|border|23px]] [[Cattolica]], [[Italii]]
+* [[Fail:Flag of Italy.svg|border|23px]] [[Kattolik]], [[Italii]]
 * [[Fail:Flag of China.svg|border|23px]] [[Čungking]], [[Kitai]]
-* [[Fail:Flag of Finland.svg|border|23px]] [[Jyväskylä]], [[Suomenma]]
+* [[Fail:Flag of Finland.svg|border|23px]] [[Jüväskülä]], [[Suomenma]]
 * [[Fail:Flag of Lithuania.svg|border|23px]] [[Klaiped]], [[Litvanma]]
 * [[Fail:Flag of Poland.svg|border|23px]] [[Lüblin]], [[Pol'šanma]]
-* [[Fail:Flag of the United States.svg|border|23px]] [[New Brunswick]], [[Amerikan Ühtenzoittud Valdkundad|AÜV]]
-* [[Fail:Flag of Romania.svg|border|23px]] [[Oradera]], [[Romanii]]
+* [[Fail:Flag of the United States.svg|border|23px]] [[N'ju Bransuik]], [[Amerikan Ühtenzoittud Valdkundad|AÜV]]
+* [[Fail:Flag of Romania.svg|border|23px]] [[Orad']], [[Romanii]]
 * [[Fail:Flag of Germany.svg|border|23px]] [[Paderborn]], [[Saksanma]]
 * [[Fail:Flag of Russia.svg|border|23px]] [[Piter]], [[Venäma]]
-* [[Fail:Flag of Israel.svg|border|23px]] [[Rishon LeZion]], [[Izrail']]
-* [[Fail:Flag of Portugal.svg|border|23px]] [[Setúbal]], [[Portugalii]]
-* [[Fail:Flag of Bulgaria.svg|border|23px]] [[Sumen]], [[Bolgarii]]
-* [[Fail:Flag of Taiwan.svg|border|23px]] [[Tajtung]], [[Taivan]]
+* [[Fail:Flag of Israel.svg|border|23px]] [[Rišon le Cion]], [[Izrail']]
+* [[Fail:Flag of Portugal.svg|border|23px]] [[Setubal']], [[Portugalii]]
+* [[Fail:Flag of Bulgaria.svg|border|23px]] [[Šumen]], [[Bolgarii]]
+* [[Fail:Flag of China.svg|border|23px]] [[Taidung]], [[Kitai]]
 * [[Fail:Flag of China.svg|border|23px]] [[Tongliao]], [[Kitai]]
-
 {{stub}}
 
 [[Kategorii:Mad'jaranman lidnad]]
