*Empty MediaWiki Message*

--- a/Debrecen.mw
+++ b/Debrecen.mw
@@ -20,7 +20,7 @@ Eläjiden lugu om 207,594 ristitud (2012), a pind — 461 km<sup>2</sup> läz. N
 == Sebruzlidnad ==
 [[Fail:Debrecen testvérvárosai.JPG|thumbnail|left|250px|Debrecenan sebruzlidnoiden teznam]]
 * [[Fail:Flag of Italy.svg|border|23px]] [[Kattolik]], [[Italii]]
-* [[Fail:Flag of China.svg|border|23px]] [[Čungking]], [[Kitai]]
+* [[Fail:Flag of China.svg|border|23px]] [[Čuncin]], [[Kitai]]
 * [[Fail:Flag of Finland.svg|border|23px]] [[Jüväskülä]], [[Suomenma]]
 * [[Fail:Flag of Lithuania.svg|border|23px]] [[Klaiped]], [[Litvanma]]
 * [[Fail:Flag of Poland.svg|border|23px]] [[Lüblin]], [[Pol'šanma]]
@@ -32,7 +32,7 @@ Eläjiden lugu om 207,594 ristitud (2012), a pind — 461 km<sup>2</sup> läz. N
 * [[Fail:Flag of Portugal.svg|border|23px]] [[Setubal']], [[Portugalii]]
 * [[Fail:Flag of Bulgaria.svg|border|23px]] [[Šumen]], [[Bolgarii]]
 * [[Fail:Flag of China.svg|border|23px]] [[Taidung]], [[Kitai]]
-* [[Fail:Flag of China.svg|border|23px]] [[Tongliao]], [[Kitai]]
+* [[Fail:Flag of China.svg|border|23px]] [[Tunläo]], [[Kitai]]
 {{stub}}
 
 [[Kategorii:Mad'jaranman lidnad]]
