*Empty MediaWiki Message*

--- a/Mad'jaranman_lidnad.mw
+++ b/Mad'jaranman_lidnad.mw
@@ -189,7 +189,7 @@
 |-
 | '''[[Bešen'söd]]'''
 | [[Pohjoine Al'föl'd]]
-| [[Jas Nad'kun Solnok]]
+| [[Jas Nad'kun Sol'nok]]
 | 3372
 |-
 | '''[[Biatorbad']]'''
@@ -434,7 +434,7 @@
 |-
 | '''[[Fed'vernek]]'''
 | [[Pohjoine Al'föl'd]] 
-| [[Jas Nad'kun Solnok]]
+| [[Jas Nad'kun Sol'nok]]
 | 6415
 |-
 | '''[[Feherd'jarmat]]'''
@@ -644,27 +644,27 @@
 |-
 | '''[[Jasapati]]'''
 | [[Pohjoine Al'föl'd]]
-| [[Jas Nad'kun Solnok]]
+| [[Jas Nad'kun Sol'nok]]
 | 8947
 |-
 | '''[[Jasaroksallaš]]'''
 | [[Pohjoine Al'föl'd]]
-| [[Jas Nad'kun Solnok]]
+| [[Jas Nad'kun Sol'nok]]
 | 7806
 |-
 | '''[[Jasberen']]'''
 | [[Pohjoine Al'föl'd]]
-| [[Jas Nad'kun Solnok]]
+| [[Jas Nad'kun Sol'nok]]
 | 26924
 |-
 | '''[[Jasfen'saru]]'''
 | [[Pohjoine Al'föl'd]]
-| [[Jas Nad'kun Solnok]]
+| [[Jas Nad'kun Sol'nok]]
 | 5621
 |-
 | '''[[Jaskišer]]'''
 | [[Pohjoine Al'föl'd]]
-| [[Jas Nad'kun Solnok]]
+| [[Jas Nad'kun Sol'nok]]
 | 5165
 |-
 | '''[[Kaba]]'''
@@ -694,7 +694,7 @@
 |-
 | '''[[Karcag]]'''
 | [[Pohjoine Al'föl'd]]
-| [[Jas Nad'kun Solnok]]
+| [[Jas Nad'kun Sol'nok]]
 | 19980
 |-
 | '''[[Kazincbarcika]]'''
@@ -719,7 +719,7 @@
 |-
 | '''[[Kendereš]]'''
 | [[Pohjoine Al'föl'd]]
-| [[Jas Nad'kun Solnok]]
+| [[Jas Nad'kun Sol'nok]]
 | 4647
 |-
 | '''[[Kereked'jhaza]]'''
@@ -774,12 +774,12 @@
 |-
 | '''[[Kišujsallaš]]'''
 | [[Pohjoine Al'föl'd]]
-| [[Jas Nad'kun Solnok]]
+| [[Jas Nad'kun Sol'nok]]
 | 11367
 |-
 | '''[[Kišvarda]]'''
 | [[Pohjoine Al'föl'd]]
-| [[Jas Nad'kun Solnok]]
+| [[Sabol'č Satmar Bereg]]
 | 16473
 |-
 | '''[[Komadi]]'''
@@ -824,12 +824,12 @@
 |-
 | '''[[Kunhed'es]]'''
 | [[Pohjoine Al'föl'd]]
-| [[Jas Nad'kun Solnok]]
+| [[Jas Nad'kun Sol'nok]]
 | 7483
 |-
 | '''[[Kunsentmarton]]'''
 | [[Pohjoine Al'föl'd]]
-| [[Jas Nad'kun Solnok]]
+| [[Jas Nad'kun Sol'nok]]
 | 8373
 |-
 | '''[[Kunsentmikloš]]'''
@@ -909,7 +909,7 @@
 |-
 | '''[[Martfü]]'''
 | [[Pohjoine Al'föl'd]]
-| [[Jas Nad'kun Solnok]]
+| [[Jas Nad'kun Sol'nok]]
 | 6435
 |-
 | '''[[Martonvašar]]'''
@@ -964,7 +964,7 @@
 |-
 | '''[[Mezotur]]'''
 | [[Pohjoine Al'föl'd]]
-| [[Jas Nad'kun Solnok]]
+| [[Jas Nad'kun Sol'nok]]
 | 17337
 |-
 | '''[[Mindsent]]'''
