*Empty MediaWiki Message*

--- a/Jas_Nad'kun_Sol'nok.mw
+++ b/Jas_Nad'kun_Sol'nok.mw
@@ -1,4 +1,6 @@
-'''Jas Nad'kun Sol'nok''' ([[Mad'jaran kel'|mad'j]].: ''Jász-Nagykun-Szolnok megye'') om üks' [[Mad'jaranma]]n agjoišpäi. Jas Nad'kun Sol'nok-agjan administrativine keskuz da kaikiš suremb lidn om [[Sol'nok]].
+'''Jas Nad'kun Sol'nok''' ([[Mad'jaran kel'|mad'j]].: ''Jász-Nagykun-Szolnok megye'') om üks' [[Mad'jaranma]]n agjoišpäi.
+
+Jas Nad'kun Sol'nok-agjan administrativine keskuz da kaikiš suremb lidn om [[Sol'nok]].
 
 == Administrativine jagand ==
 
@@ -7,7 +9,7 @@
 Siš agjas om 22 lidnad:
 * [[Abadsalok]] (''Abádszalók'')
 * [[Bešen'sög]] (''Besenyszög'')
-* [[Fed'jvernek]] (''Fegyvernek'')
+* [[Fed'vernek]] (''Fegyvernek'')
 * [[Jasapati]] (''Jászapáti'')
 * [[Jasaroksallaš]] (''Jászárokszállás'')
 * [[Jasberen']] (''Jászberény'')
@@ -15,19 +17,18 @@ Siš agjas om 22 lidnad:
 * [[Jaskišer]] (''Jászkisér'')
 * [[Karcag]] (''Karcag'')
 * [[Kendereš]] (''Kenderes'')
-* [[Kišujsallaš]] (''Kisújszállás'')
+* [[Kišuisallaš]] (''Kisújszállás'')
 * [[Kunhed'jes]] (''Kunhegyes'')
 * [[Kunsentmarton]] (''Kunszentmárton'')
-* [[Martfu]] (''Martfű'')
-* [[Mezotur]] (''Mezőtúr'')
-* [[Rakoczifalv]] (''Rákóczifalva'')
+* [[Martfü]] (''Martfű'')
+* [[Mezötur]] (''Mezőtúr'')
+* [[Rakoczifal'v]] (''Rákóczifalva'')
 * [[Sol'nok]] (''Szolnok'')
-* [[Tisaföldvar]] (''Tiszaföldvár'')
-* [[Tisafured]] (''Tiszafüred'')
+* [[Tisaföl'dvar]] (''Tiszaföldvár'')
+* [[Tisafüred]] (''Tiszafüred'')
 * [[Töröksentmiklos]] (''Törökszentmiklós'')
 * [[Turkeve]] (''Túrkeve'')
-* [[Ujsas]] (''Újszász'')
-
+* [[Uisas]] (''Újszász'')
 
 Päiči lidnoiš, Jas Nad'kun Sol'nokas om 78 žilod.
 
