*Empty MediaWiki Message*

--- a/Raum.mw
+++ b/Raum.mw
@@ -13,7 +13,7 @@
  | Telefonkod = +358-2
  | Aigvö = [[UTC]]+3
 }}
-'''Raum''' ([[suomen kel'|suomen kelel]]: ''Rauma'', [[ročin kel'|ročin kelel]]: ''Raumo'') om lidn [[Suomenma]]n päivlaskmas, [[Satakunt]]-provincijas.
+'''Raum''' ([[suomen kel'|suomen kelel]]: ''Rauma'', [[ročin kel'|ročin kelel]]: ''Raumo'') om lidn [[Suomenma]]n päivlaskmas, [[Sadakund]]-provincijas.
 
 Rauman vahn lidn (''Vanha Rauma'') om pandud [[UNESCO]]:n mail'man kal'huziden nimikirjuteshe.
 
