*Empty MediaWiki Message*

--- a/Kapošvar.mw
+++ b/Kapošvar.mw
@@ -1,5 +1,5 @@
 {{Eländpunkt
- | Nimi = Kapošvar<br />Kaposvár
+ | Nimi = Kapošvar<br />Kaposvár<br />Ruppertsburg<br />Kapoşvar<br />Rupertgrad<br />Kapošvar
  | Lidnanznam = HUN Kaposvár COA.jpg
  | Flag = 
  | Lidnanznam text = Kapošvaran lidnanznam
@@ -7,28 +7,28 @@
  | Valdkund = Mad'jaranma
  | Eläjiden lugu = 67,979
  | Voz' = 2011
- | Pind = 113
+ | Pind = 114
  | Fail = Kaposvar montage.jpg
  | Pämez' = Sita Karoj
  | Telefonkod = +36-46
  | Aigvö = [[UTC]]+2
 }}
-'''Kapošvar''' ([[Mad'jaran kel'|mad'j.]]: ''Kaposvár'') om lidn [[Mad'jaranma]]s, [[Šomod' (agj)|Šomod'-agjan]] pälidn.
+'''Kapošvar''' ([[Mad'jaran kel'|mad'j.]]: ''Kaposvár'', [[saksan kel'|saks.]]: ''Ruppertsburg'', [[turkan kel'|turk.]]: ''Kapoşvar'', [[slovenijan kel'|sloven.]]: ''Rupertgrad'', [[horvatan kel'|horv.]]: ''Kapošvar'') om lidn [[Mad'jaranma]]s, [[Šomod' (agj)|Šomod'-agjan]] pälidn.
 
-Eläjiden lugu om 67,979 ristitud (2011), a pind — 113 km<sup>2</sup> läz. Nügüd'läine lidnan pämez' om Sita Karoj.
+Eläjiden lugu om 67,979 ristitud (2011), a pind — 114 km<sup>2</sup> läz. Nügüd'läine lidnan pämez' om Sita Karol'.
 
 == Sebruzlidnad ==
-* [[Fail:Flag of England.svg|border|23px]] [[Bath]], [[Anglii]]
+* [[Fail:Flag of United Kingdom.svg|border|23px]] [[Bat (Anglii)]], [[Sur' Britanii]]
 * [[Fail:Flag of Mongolia.svg|border|23px]] [[Darhan]], [[Mongolii]]
 * [[Fail:Flag of Germany.svg|border|23px]] [[Glinde]], [[Saksanma]]
-* [[Fail:Flag of Croatia.svg|border|23px]] [[Kapronca]], [[Horvatii]]
-* [[Fail:Flag of Romania.svg|border|23px]] [[Miercurea Ciuc]], [[Romanii]]
+* [[Fail:Flag of Croatia.svg|border|23px]] [[Koprivnic]], [[Horvatii]]
+* [[Fail:Flag of Romania.svg|border|23px]] [[Merkurä Čuk]], [[Romanii]]
 * [[Fail:Flag of Bosnia and Herzegovina.svg|border|23px]] [[Mostar]], [[Bosnii da Gercegovin]]
-* [[Fail:Flag of Finland.svg|border|23px]] [[Rauma]], [[Suomenma]]
-* [[Fail:Flag of France.svg|border|23px]] [[Saint-Sébastien-sur-Loire]], [[Francii]]
-* [[Fail:Flag of Italy.svg|border|23px]] [[Scio]], [[Italii]]
+* [[Fail:Flag of Finland.svg|border|23px]] [[Raum]], [[Suomenma]]
+* [[Fail:Flag of France.svg|border|23px]] [[Sen Sebast'jan sür Luar]], [[Francii]]
+* [[Fail:Flag of Italy.svg|border|23px]] [[Skio]], [[Italii]]
 * [[Fail:Flag of Russia.svg|border|23px]] [[Tver']], [[Venäma]]
-* [[Fail:Flag of Austria.svg|border|23px]] [[Villach]], [[Avstrii]]
+* [[Fail:Flag of Austria.svg|border|23px]] [[Fillah]], [[Avstrii]]
 {{stub}}
 
 [[Kategorii:Mad'jaranman lidnad]]
