*Empty MediaWiki Message*

--- a/D'jor.mw
+++ b/D'jor.mw
@@ -1,5 +1,5 @@
 {{Eländpunkt
- | Nimi = D'jor<br />Győr<br />Győr<br />Győr<br />Iaurinum<br /><br />Győr<br />Győr<br />Ђер / Đer
+ | Nimi = D'jor<br />Győr<br />Iaurinum<br />Ђер / Đer
  | Lidnanznam = Győr COA.png 
  | Flag = 
  | Lidnanznam text = D'joran lidnanznam
@@ -7,15 +7,15 @@
  | Valdkund = Mad'jaranma
  | Eläjiden lugu = 131,564
  | Voz' = 2012
- | Pind = 174
+ | Pind = 175
  | Fail = GyőrMontage3.jpg
- | Pämez' = Borkai Žolt
- | Telefonkod = +36-36
+ | Pämez' = Borkai Žol't
+ | Telefonkod = +36-96
  | Aigvö = [[UTC]]+2
 }}
-'''D'jor''' ([[Mad'jaran kel'|mad'j.]]: ''Győr'', [[Saksan kel'|saks.]]: ''Győr'', [[slovakijan kel'|slovak.]]: ''Győr'', [[latinan kel'|lat.]]: ''Iaurinum'', [[turkan kel'|turk.]]: ''Győr'', [[pol'šan kel'|pol'š.]]: ''Győr'', [[čehan kel'|čeh.]]: ''Győr'', [[serbijan kel'|serb.]]: ''Ђер / Đer'') om lidn [[Mad'jaranma]]s, [[D'jor Mošon Šopron|D'jor Mošon Šopron|-agjan]] pälidn.
+'''D'jor''' ([[Mad'jaran kel'|mad'j.]]: ''Győr'', [[latinan kel'|lat.]]: ''Iaurinum'', [[serbijan kel'|serb.]]: ''Ђер / Đer'') om lidn [[Mad'jaranma]]s, [[D'jor Mošon Šopron|D'jor Mošon Šopron-agjan]] pälidn.
 
-Eläjiden lugu om 131,564 ristitud (2012), a pind — 174 km<sup>2</sup> läz. Nügüd'läine lidnan pämez' om Borkai Žolt.
+Eläjiden lugu om 131,564 ristitud (2012), a pind — 175 km<sup>2</sup> läz. Nügüd'läine lidnan pämez' om Borkai Žol't.
 
 == Sebruzlidnad ==
 * [[Fail:Flag of Romania.svg|border|23px]] [[Brašov]], [[Romanii]]
@@ -28,9 +28,6 @@ Eläjiden lugu om 131,564 ristitud (2012), a pind — 174 km<sup>2</sup> läz. N
 * [[Fail:Flag of Germany.svg|border|23px]] [[Šindelfingen]], [[Saksanma]]
 * [[Fail:Flag of Poland.svg|border|23px]] [[Poznan']], [[Pol'šanma]]
 * [[Fail:Flag of China.svg|border|23px]] [[Wuhan]], [[Kitai]]
-
-
-
 {{stub}}
 
 [[Kategorii:Mad'jaranman lidnad]]
