--- a/Kapošvar.mw
+++ b/Kapošvar.mw
@@ -9,7 +9,7 @@
  | Voz' = 2011
  | Pind = 114
  | Fail = Kaposvar montage.jpg
- | Pämez' = Sita Karoj
+ | Pämez' = Sita Karol'
  | Telefonkod = +36-082
  | Aigvö = [[UTC]]+2
 }}
