--- a/D'jor.mw
+++ b/D'jor.mw
@@ -19,15 +19,15 @@ Eläjiden lugu om 131,564 ristitud (2012), a pind — 175 km<sup>2</sup> läz. N
 
 == Sebruzlidnad ==
 * [[Fail:Flag of Romania.svg|border|23px]] [[Brašov]], [[Romanii]]
-* [[Fail:Flag of France.svg|border|23px]] [[Colmar]], [[Francii]]
+* [[Fail:Flag of France.svg|border|23px]] [[Kol'mar]], [[Francii]]
 * [[Fail:Flag of Germany.svg|border|23px]] [[Erfurt]], [[Saksanma]]
-* [[Fail:Flag of Germany.svg|border|23px]] [[Ingolstadt]], [[Saksanma]]
+* [[Fail:Flag of Germany.svg|border|23px]] [[Ingol'stadt]], [[Saksanma]]
 * [[Fail:Flag of Finland.svg|border|23px]] [[Kuopio]], [[Suomenma]]
-* [[Fail:Flag of Israel.svg|border|23px]] [[Nazareth-Illit]], [[Izrail']]
-* [[Fail:Flag of Russia.svg|border|23px]] [[Alauz'lidn]], [[Venänma]]
-* [[Fail:Flag of Germany.svg|border|23px]] [[Šindelfingen]], [[Saksanma]]
+* [[Fail:Flag of Israel.svg|border|23px]] [[Nacerat-Illit]], [[Izrail']]
+* [[Fail:Flag of Russia.svg|border|23px]] [[Alauz'lidn]], [[Venäma]]
+* [[Fail:Flag of Germany.svg|border|23px]] [[Zingel'fingen]], [[Saksanma]]
 * [[Fail:Flag of Poland.svg|border|23px]] [[Poznan']], [[Pol'šanma]]
-* [[Fail:Flag of China.svg|border|23px]] [[Wuhan]], [[Kitai]]
+* [[Fail:Flag of China.svg|border|23px]] [[Uhan']], [[Kitai]]
 {{stub}}
 
 [[Kategorii:Mad'jaranman lidnad]]
