*Empty MediaWiki Message*

--- a/Miškol'c.mw
+++ b/Miškol'c.mw
@@ -8,7 +8,7 @@
  | Eläjiden lugu = 167,754
  | Voz' = 2011
  | Pind = 84
- | Fail = Miskolc montage.JPG
+ | Fail = Misk city01.jpg
  | Pämez' = Kriza Akoš
  | Telefonkod = +36-46
  | Aigvö = [[UTC]]+2
