*Empty MediaWiki Message*

--- a/Kečkemet.mw
+++ b/Kečkemet.mw
@@ -8,7 +8,7 @@
  | Eläjiden lugu = 114,226
  | Voz' = 2012
  | Pind = 32
- | Fail = Cifra Palota.jpg
+ | Fail = Ifjúsági Otthon 2.jpg
  | Pämez' = Zombor Gabor
  | Telefonkod = +36-76
  | Aigvö = [[UTC]]+2
