*Empty MediaWiki Message*

--- a/D'jor.mw
+++ b/D'jor.mw
@@ -8,7 +8,7 @@
  | Eläjiden lugu = 131,564
  | Voz' = 2012
  | Pind = 175
- | Fail = GyőrMontage3.jpg
+ | Fail = Gyor24.jpg
  | Pämez' = Borkai Žol't
  | Telefonkod = +36-96
  | Aigvö = [[UTC]]+2
