*Empty MediaWiki Message*

--- a/Kapošvar.mw
+++ b/Kapošvar.mw
@@ -8,7 +8,7 @@
  | Eläjiden lugu = 67,979
  | Voz' = 2011
  | Pind = 114
- | Fail = Kaposvar montage.jpg
+ | Fail = Kaposvár pénzügyi palota.JPG
  | Pämez' = Sita Karol'
  | Telefonkod = +36-082
  | Aigvö = [[UTC]]+2
