*Empty MediaWiki Message*

--- a/Mad'jaranman_lidnad.mw
+++ b/Mad'jaranman_lidnad.mw
@@ -154,17 +154,17 @@
 |-
 | '''[[Batton'j]]'''
 | [[Suvial'föl'd]]
-| [[Bekeš]]
+| [[Bekeš (agj)|Bekeš]]
 | 5565
 |-
 | '''[[Bekeš (lidn)|Bekeš]]'''
 | [[Suvial'föl'd]]
-| [[Bekeš]]
+| [[Bekeš (agj)|Bekeš]]
 | 19763
 |-
 | '''[[Bekeš'čab]]'''
 | [[Suvial'föl'd]]
-| [[Bekeš]]
+| [[Bekeš (agj)|Bekeš]]
 | 63752
 |-
 | '''[[Belapatfal'v]]'''
@@ -299,7 +299,7 @@
 |-
 | '''[[Čorvaš]]'''
 | [[Suvidunajantagaine rand]]
-| [[Bekeš]]
+| [[Bekeš (agj)|Bekeš]]
 | 4981
 |-
 | '''[[Čurgo]]'''
@@ -329,7 +329,7 @@
 |-
 | '''[[Devavan'j]]'''
 | [[Suvial'föl'd]]
-| [[Bekeš]]
+| [[Bekeš (agj)|Bekeš]]
 | 7622
 |-
 | '''[[Devečer]]'''
@@ -399,7 +399,7 @@
 |-
 | '''[[Elek]]'''
 | [[Suvial'föl'd]]
-| [[Bekeš]]
+| [[Bekeš (agj)|Bekeš]]
 | 4816
 |-
 | '''[[Emöd]]'''
@@ -474,7 +474,7 @@
 |-
 | '''[[Füzešd'jarmat]]'''
 | [[Suvial'föl'd rand]]
-| [[Bekeš]]
+| [[Bekeš (agj)|Bekeš]]
 | 5665
 |-
 | '''[[Gardon']]'''
@@ -504,7 +504,7 @@
 |-
 | '''[[D'jömaendröd]]
 | [[Suvial'föl'd rand]]
-| [[Bekeš]]
+| [[Bekeš (agj)|Bekeš]]
 | 13674
 |-
 | '''[[D'jomrö]]'''
@@ -534,7 +534,7 @@
 |-
 | '''[[D'jul (lidn)|D'jul]]'''
 | [[Suvial'föl'd rand]]
-| [[Bekeš]]
+| [[Bekeš (agj)|Bekeš]]
 | 31679
 |-
 | '''[[Haidubösörmen']]
@@ -799,7 +799,7 @@
 |-
 | '''[[Kondoroš]]'''
 | [[Suvial'föl'd rand]]
-| [[Bekeš]]
+| [[Bekeš (agj)|Bekeš]]
 | 5201
 |-
 | '''[[Kozarmišlen']]'''
@@ -814,7 +814,7 @@
 |-
 | '''[[Korošladan']]'''
 | [[Suvial'föl'd rand]]
-| [[Bekeš]]
+| [[Bekeš (agj)|Bekeš]]
 | 4582
 |-
 | '''[[Koseg]]'''
@@ -924,7 +924,7 @@
 |-
 | '''[[Medd'esed'haza]]'''
 | [[Suvial'föl'd rand]]
-| [[Bekeš]]
+| [[Bekeš (agj)|Bekeš]]
 | 3691
 |-
 | '''[[Meikut]]'''
@@ -934,7 +934,7 @@
 |-
 | '''[[Mezoberen']]'''
 | [[Suvial'föl'd rand]]
-| [[Bekeš]]
+| [[Bekeš (agj)|Bekeš]]
 | 10896
 |-
 | '''[[Mezočat]]'''
@@ -944,7 +944,7 @@
 |-
 | '''[[Mezohed'eš]]'''
 | [[Suvial'föl'd rand]]
-| [[Bekeš]]
+| [[Bekeš (agj)|Bekeš]]
 | 4994
 |-
 | '''[[Mezokeresteš]]'''
@@ -954,7 +954,7 @@
 |-
 | '''[[Mezokovačhaza]]'''
 | [[Suvial'föl'd rand]]
-| [[Bekeš]]
+| [[Bekeš (agj)|Bekeš]]
 | 6049
 |-
 | '''[[Mezokovešd]]'''
