*Empty MediaWiki Message*

--- a/Mad'jaranman_lidnad.mw
+++ b/Mad'jaranman_lidnad.mw
@@ -44,7 +44,7 @@
 |-
 | '''[[Aik]]'''
 | [[Keskuzdunajantagaine rand]]
-| [[Vesprem]]
+| [[Vesprem (agj)|Vesprem]]
 | 29058
 |-
 | '''[[Al'bertirš]]'''
@@ -74,7 +74,7 @@
 |-
 | '''[[Badačon'tomai]]'''
 | [[Keskuzdunajantagaine rand]]
-| [[Vesprem]]
+| [[Vesprem (agj)|Vesprem]]
 | 2080
 |-
 | '''[[Bai]]'''
@@ -94,7 +94,7 @@
 |-
 | '''[[Balatonal'madi]]'''
 | [[Keskuzdunajantagaine rand]]
-| [[Vesprem]]
+| [[Vesprem (agj)|Vesprem]]
 | 9167
 |-
 | '''[[Balatonboglar]]'''
@@ -109,17 +109,17 @@
 |-
 | '''[[Balatonfüred]]'''
 | [[Keskuzdunajantagaine rand]]
-| [[Vesprem]]
+| [[Vesprem (agj)|Vesprem]]
 | 13532
 |-
 | '''[[Balatonfüzfö]]'''
 | [[Keskuzdunajantagaine rand]]
-| [[Vesprem]]
+| [[Vesprem (agj)|Vesprem]]
 | 4299
 |-
 | '''[[Balatonkeneše]]'''
 | [[Keskuzdunajantagaine rand]]
-| [[Vesprem]]
+| [[Vesprem (agj)|Vesprem]]
 | 3195
 |-
 | '''[[Balatonlelle]]'''
@@ -184,7 +184,7 @@
 |-
 | '''[[Berhid]]'''
 | [[Keskuzdunajantagaine rand]]
-| [[Vesprem]]
+| [[Vesprem (agj)|Vesprem]]
 | 5967
 |-
 | '''[[Bešen'söd]]'''
@@ -259,7 +259,7 @@
 |-
 | '''[[Cell'dömöl'k]]'''
 | [[Keskuzdunajantagaine rand]]
-| [[Vesprem]]
+| [[Vesprem (agj)|Vesprem]]
 | 10786
 |-
 | '''[[Cigand]]'''
@@ -334,7 +334,7 @@
 |-
 | '''[[Devečer]]'''
 | [[Keskuzdunajantagaine rand]]
-| [[Vesprem]]
+| [[Vesprem (agj)|Vesprem]]
 | 4325
 |-
 | '''[[Diošd]]'''
@@ -589,7 +589,7 @@
 |-
 | '''[[Herend]]'''
 | [[Keskuzdunajantagaine rand]]
-| [[Vesprem]]
+| [[Vesprem (agj)|Vesprem]]
 | 3339
 |-
 | '''[[Heveš (lidn)|Heveš]]'''
