*Empty MediaWiki Message*

--- a/Mad'jaranman_lidnad.mw
+++ b/Mad'jaranman_lidnad.mw
@@ -624,12 +624,12 @@
 |-
 | '''[[Ižak]]'''
 | [[Suvial'föl'd]]
-| [[Bač Kiskun]]
+| [[Bač Kiškun]]
 | 5904
 |-
 | '''[[Janošhalma]]'''
 | [[Suvial'föl'd]]
-| [[Bač Kiskun]]
+| [[Bač Kiškun]]
 | 8937
 |-
 | '''[[Janošhaza]]'''
@@ -679,7 +679,7 @@
 |-
 | '''[[Kaloča]]'''
 | [[Suvial'föl'd]]
-| [[Bač Kiskun]]
+| [[Bač Kiškun]]
 | 16959
 |-
 | '''[[Kapošvar]]'''
@@ -704,12 +704,12 @@
 |-
 | '''[[Kecel]]'''
 | [[Suvial'föl'd]]
-| [[Bač Kiskun]]
+| [[Bač Kiškun]]
 | 8687
 |-
 | '''[[Kečkemet]]'''
 | [[Suvial'föl'd]]
-| [[Bač Kiskun]]
+| [[Bač Kiškun]]
 | 114226
 |-
 | '''[[Kemeče]]'''
@@ -724,7 +724,7 @@
 |-
 | '''[[Kereked'jhaza]]'''
 | [[Suvial'föl'd]]
-| [[Bač Kiskun]]
+| [[Bač Kiškun]]
 | 6300
 |-
 | '''[[Kerepeš]]'''
@@ -749,17 +749,17 @@
 |-
 | '''[[Kiškunfeled'haza]]'''
 | [[Suvial'föl'd]]
-| [[Bač Kiskun]]
+| [[Bač Kiškun]]
 | 29972
 |-
 | '''[[Kiškunhalaš]]'''
 | [[Suvial'föl'd]]
-| [[Bač Kiskun]]
+| [[Bač Kiškun]]
 | 28427
 |-
 | '''[[Kiškunmajša]]'''
 | [[Suvial'föl'd]]
-| [[Bač Kiskun]]
+| [[Bač Kiškun]]
 | 11766
 |-
 | '''[[Kištarča]]'''
@@ -834,7 +834,7 @@
 |-
 | '''[[Kunsentmikloš]]'''
 | [[Suvial'föl'd]]
-| [[Bač Kiskun]]
+| [[Bač Kiškun]]
 | 8515
 |-
 | '''[[Labatlan]]'''
@@ -844,7 +844,7 @@
 |-
 | '''[[Laiošmiže]]'''
 | [[Suvial'föl'd]]
-| [[Bač Kiskun]]
+| [[Bač Kiškun]]
 | 11073
 |-
 | '''[[Leben']]'''
@@ -929,7 +929,7 @@
 |-
 | '''[[Meikut]]'''
 | [[Suvial'föl'd]]
-| [[Bač Kiskun]]
+| [[Bač Kiškun]]
 | 5081
 |-
 | '''[[Mezoberen']]'''
