*Empty MediaWiki Message*

--- a/Haidu_Bihar.mw
+++ b/Haidu_Bihar.mw
@@ -7,9 +7,8 @@ Haidu Bihar-agjan administrativine keskuz da kaikiš suremb lidn om [[Debrecen]]
 === Lidnad ===
 [[Fail:HU county Hajdu-Bihar.svg|thumbnail|right|250px|Haidu Bihar-agjan kart]]
 Siš agjas om 21 lidnad:
-
-* [[Balmazujvaroš]] (''Balmazújváros'')
-* [[Berett'joujfalu]] (''Berettyóújfalu'')
+* [[Bal'mazuivaroš]] (''Balmazújváros'')
+* [[Berett'jouifalu]] (''Berettyóújfalu'')
 * [[Biharkeresteš]] (''Biharkeresztes'')
 * [[Debrecen]] (''Debrecen'')
 * [[Derečke]] (''Derecske'')
@@ -19,17 +18,16 @@ Siš agjas om 21 lidnad:
 * [[Haidunanaš]] (''Hajdúnánás'')
 * [[Haidušamšon]] (''Hajdúsámson'')
 * [[Haidusoboslo]] (''Hajdúszoboszló'')
-* [[Kaba]] (''Kaba'')
+* [[Kab (lidn, Mad'jaranma)|Kab]] (''Kaba'')
 * [[Komadi]] (''Komádi'')
 * [[Letaverteš]] (''Létavértes'')
 * [[Nadudvar]] (''Nádudvar'')
 * [[N'jiradon']] (''Nyíradony'')
-* [[Polgar]] (''Polgár'')
-* [[Puspökladan']] (''Püspökladány'')
+* [[Pol'gar]] (''Polgár'')
+* [[Püšpökladan']] (''Püspökladány'')
 * [[Teglaš]] (''Téglás'')
 * [[Tisačege]] (''Tiszacsege'')
 * [[Vamošperč]] (''Vámospércs'')
-
 
 Päiči lidnoiš, Haidu Biharas om 82 žilod.
 
