*Empty MediaWiki Message*

--- a/Bekeš_(agj).mw
+++ b/Bekeš_(agj).mw
@@ -1,6 +1,6 @@
 '''Bekeš''' ([[Mad'jaran kel'|mad'j]].: ''Békés megye'') om üks' [[Mad'jaranma]]n agjoišpäi.
 
-Bekeš-agjan administrativine keskuz da kaikiš suremb lidn om [[Bekeščab]].
+Bekeš-agjan administrativine keskuz da kaikiš suremb lidn om [[Bekeš'čab]].
 
 == Administrativine jagand ==
 
@@ -8,27 +8,27 @@ Bekeš-agjan administrativine keskuz da kaikiš suremb lidn om [[Bekeščab]].
 [[Fail:HU county Bekes.svg|thumbnail|right|250px|Bekeš-agjan kart]]
 Siš agjas om 21 lidnad:
 
-* [[Batton']] (''Battonya'')
+* [[Batton'j]] (''Battonya'')
 * [[Bekeš (lidn)|Bekeš]] (''Békés'')
-* [[Bekeščab]] (''Békéscsaba'')
+* [[Bekeš'čab]] (''Békéscsaba'')
 * [[Čorvaš]] (''Csorvás'')
-* [[Devanan']] (''Dévaványa'')
+* [[Devanan'j]] (''Dévaványa'')
 * [[Elek]] (''Elek'')
-* [[Fuzešd'jarmat]] (''Füzesgyarmat'')
+* [[Füzešd'jarmat]] (''Füzesgyarmat'')
 * [[D'jomaendröd]] (''Gyomaendrőd'')
 * [[D'jul]] (''Gyula'')
 * [[Kondoroš]] (''Kondoros'')
-* [[Körösladan']] (''Körösladány'')
-* [[Medd'ješed'jhaz]] (''Medgyesegyháza'')
-* [[Mezoberen']] (''Mezőberény'')
-* [[Mezohed'ješ]] (''Mezőhegyes'')
-* [[Mezokovačhaz]] (''Mezőkovácsháza'')
+* [[Köröšladan']] (''Körösladány'')
+* [[Medd'ješed'haz]] (''Medgyesegyháza'')
+* [[Mezöberen']] (''Mezőberény'')
+* [[Mezöhed'ješ]] (''Mezőhegyes'')
+* [[Mezökovačhaz]] (''Mezőkovácsháza'')
 * [[Orošhaz]] (''Orosháza'')
 * [[Šarkad]] (''Sarkad'')
 * [[Sarvaš]] (''Szarvas'')
 * [[Seghalom]] (''Szeghalom'')
 * [[Totkomloš]] (''Tótkomlós'')
-* [[Ujkid'jos]] (''Újkígyós'')
+* [[Uikid'još]] (''Újkígyós'')
 * [[Vestö]] (''Vésztő'')
 
 Päiči lidnoiš, Bekešas om 75 žilod.
