*Empty MediaWiki Message*

--- a/Fejer.mw
+++ b/Fejer.mw
@@ -7,21 +7,20 @@ Fejer-agjan administrativine keskuz da kaikiš suremb lidn om [[Sekešfehervar]]
 === Lidnad ===
 [[Fail:HU county Fejer.svg|thumbnail|right|250px|Fejer-agjan kart]]
 Siš agjas om 17 lidnad:
-
-* [[Ab']] (''Aba'')
+* [[Ab (lidn, Mad'jaranma)|Ab]] (''Aba'')
 * [[Adon']] (''Adony'')
 * [[Bičke]] (''Bicske'')
-* [[Bodajk]] (''Bodajk'')
+* [[Bodaik]] (''Bodajk'')
 * [[Čakvar]] (''Csákvár'')
-* [[Dunajujvaroš]] (''Dunaújváros'')
+* [[Dunauivaroš]] (''Dunaújváros'')
 * [[En'jing]] (''Enying'')
 * [[Erči]] (''Ercsi'')
 * [[Gardon']] (''Gárdony'')
 * [[Martonvašar]] (''Martonvásár'')
-* [[Mor]] (''Mór'')
-* [[Polgardi]] (''Polgárdi'')
-* [[Pustasabolč]] (''Pusztaszabolcs'')
-* [[Racalmaš]] (''Rácalmás'')
+* [[Mor (lidn, Mad'jaranma)|Mor]] (''Mór'')
+* [[Pol'gardi]] (''Polgárdi'')
+* [[Pustasabol'č]] (''Pusztaszabolcs'')
+* [[Racal'maš]] (''Rácalmás'')
 * [[Šarbogard]] (''Sárbogárd'')
 * [[Sekešfehervar]] (''Székesfehérvár'')
 * [[Velence]] (''Velence'')
