*Empty MediaWiki Message*

--- a/Mad'jaranman_lidnad.mw
+++ b/Mad'jaranman_lidnad.mw
@@ -26,7 +26,7 @@
 | [[Pešt]]
 | 14876
 |-
-| '''[[Ač (lidn)|Ač]]'''
+| '''[[Ač (lidn, Mad'jaranma)|Ač]]'''
 | [[Keskuzdunajantagaine rand]]
 | [[Komarom Estergom]]
 | 6965
