*Empty MediaWiki Message*

--- a/Komarom_Estergom.mw
+++ b/Komarom_Estergom.mw
@@ -1,25 +1,24 @@
 '''Komarom Estergom''' ([[Mad'jaran kel'|mad'j]].: ''Komárom-Esztergom megye'') om üks' [[Mad'jaranma]]n agjoišpäi.
 
-Komarom Estergom-agjan administrativine keskuz da kaikiš suremb lidn om [[Tataban']].
+Komarom Estergom-agjan administrativine keskuz da kaikiš suremb lidn om [[Tataban'j]].
 
 == Administrativine jagand ==
 
 === Lidnad ===
 [[Fail:HU county Komarom-Esztergom.svg|thumbnail|right|250px|Komarom Estergom-agjan kart]]
 Siš agjas om 12 lidnad:
-
-* [[Ač]] (''Ács'')
-* [[Baboln']] (''Bábolna'')
+* [[Ač (lidn, Mad'janranma)|Ač]] (''Ács'')
+* [[Babol'n]] (''Bábolna'')
 * [[Dorog]] (''Dorog'')
 * [[Estergom]] (''Esztergom'')
 * [[Kišber]] (''Kisbér'')
 * [[Komarom]] (''Komárom'')
 * [[Labatlan]] (''Lábatlan'')
-* [[N'ergešujfal']] (''Nyergesújfalu'')
+* [[N'jergešuifal']] (''Nyergesújfalu'')
 * [[Oroslan']] (''Oroszlány'')
 * [[Tat]] (''Tát'')
 * [[Tata]] (''Tata'')
-* [[Tataban']] (''Tatabánya'')
+* [[Tataban'j]] (''Tatabánya'')
 
 Päiči lidnoiš, Komarom Estergomas om 76 žilod.
 
