long way to write

--- a/Komarom_Estergom.mw
+++ b/Komarom_Estergom.mw
@@ -16,8 +16,8 @@ Siš agjas om 12 lidnad:
 * [[Labatlan]] (''Lábatlan'')
 * [[N'jergešuifal']] (''Nyergesújfalu'')
 * [[Oroslan']] (''Oroszlány'')
-* [[Tat]] (''Tát'')
-* [[Tata]] (''Tata'')
+* [[Tat (lidn, Mad'jaranma, 2534)|Tat [PI: 2534]]] (''Tát'')
+* [[Tat (lidn, Mad'jaranma, 2890)|Tat [PI: 2890]]] (''Tata'')
 * [[Tataban'j]] (''Tatabánya'')
 
 Päiči lidnoiš, Komarom Estergomas om 76 žilod.
