*Empty MediaWiki Message*

--- a/Čongrad_(agj).mw
+++ b/Čongrad_(agj).mw
@@ -7,15 +7,14 @@
 === Lidnad ===
 [[Fail:HU county Csongrad.svg|thumbnail|right|250px|Čongrad-agjan kart]]
 Siš agjas om 10 lidnad:
-
 * [[Čanadpalot]] (''Csanadpalota'')
 * [[Čongrad]] (''Csongrád'')
-* [[Hodmezovašarhej]] (''Hódmezővasarhely'')
+* [[Hodmezövašarhel']] (''Hódmezővasarhely'')
 * [[Kišber]] (''Kisber'')
 * [[Mako]] (''Makó'')
 * [[Mindsent]] (''Mindszent'')
 * [[Morahalom]] (''Mórahalom'')
-* [[Šandorfalva]] (''Sándorfalva'')
+* [[Šandorfal'v]] (''Sándorfalva'')
 * [[Seged]] (''Szeged'')
 * [[Senteš]] (''Szentes'')
 
