*Empty MediaWiki Message*

--- a/D'jor_Mošon_Šopron.mw
+++ b/D'jor_Mošon_Šopron.mw
@@ -7,19 +7,18 @@ D'jor Mošon Šopron-agjan administrativine keskuz da kaikiš suremb lidn om [[D
 === Lidnad ===
 [[Fail:HU county Gyor-Moson-Sopron.svg|thumbnail|right|250px|D'jor Mošon Šopron-agjan kart]]
 Siš agjas om 12 lidnad:
-
 * [[Beled]] (''Beled'')
 * [[Čorn]] (''Csorna'')
 * [[Fertöd]] (''Fertőd'')
 * [[Fertösentmikloš]] (''Fertőszentmiklós'')
 * [[D'jor]] (''Győr'')
-* [[Janoššomorja]] (''Janossomorja'')
+* [[Janoššomorj]] (''Janossomorja'')
 * [[Kapuvar]] (''Kapuvár'')
 * [[Leben']] (''Lébény'')
-* [[Mošonmad'arovar]] (''Mosonmagyaróvár'')
-* [[Pannonhalma]] (''Pannonhalma'')
+* [[Mošonmad'jarovar]] (''Mosonmagyaróvár'')
+* [[Pannonhal'm]] (''Pannonhalma'')
 * [[Šopron]] (''Sopron'')
-* [[Tet]] (''Tét'')
+* [[Tet (lidn, Mad'jaranma)|Tet]] (''Tét'')
 
 Päiči lidnoiš, D'jor Mošon Šopronas om 183 žilod.
 
