--- a/Mad'jaranma.mw
+++ b/Mad'jaranma.mw
@@ -34,7 +34,7 @@ Balaton om kaikiš suremb reskvezijärv Keskuzevropas.
 === Administrativine jagand ===
 Mad'jaranmas om [[Mad'jaranman lidnad|346 lidnad]], kudambad mülüdas 19 agjoihe ([[med'je]]d), a ned — 7 regionoihe.
 
-Regionad:
+=== Regionad ===
 * [[Keskuzdunajantagaine rand]] 
 * [[Keskuzmad'jaranma]]
 * [[Päivlaskmdunajantagaine rand]]
@@ -42,6 +42,8 @@ Regionad:
 * [[Pohjoižmad'jaranma]]
 * [[Suvial'föl'd]]
 * [[Suvidunajantagaine rand]]
+
+=== Agjad (med'jed) ===
 
 == Eläjad ==
 
