*Empty MediaWiki Message*

--- a/Vesprem_(agj).mw
+++ b/Vesprem_(agj).mw
@@ -7,7 +7,6 @@ Vesprem-agjan administrativine keskuz da kaikiš suremb lidn om [[Vesprem (lidn)
 === Lidnad ===
 [[Fail:HU county Veszprem.svg|thumbnail|right|250px|Vesprem-agjan kart]]
 Siš agjas om 15 lidnad:
-
 * [[Aik]] (''Ajka'')
 * [[Badačon'tomai]] (''Badacsonytomaj'')
 * [[Balatonal'madi]] (''Balatonalmádi'')
@@ -17,10 +16,10 @@ Siš agjas om 15 lidnad:
 * [[Berhid]] (''Berhida'')
 * [[Devečer]] (''Devecser'')
 * [[Herend]] (''Herend'')
-* [[Papa]] (''Pápa'')
-* [[Sumeg (lidn)|Sümeg]] (''Sümeg'')
-* [[Tapolca]] (''Tapolca'')
-* [[Varpalota]] (''Várpalota'')
+* [[Pap (lidn, Mad'jaranma)|Pap]] (''Pápa'')
+* [[Sümeg (lidn)|Sümeg]] (''Sümeg'')
+* [[Tapol'c]] (''Tapolca'')
+* [[Varpalot]] (''Várpalota'')
 * [[Vesprem (lidn)|Vesprem]] (''Veszprém'')
 * [[Zirc]] (''Zirc'')
 
