*Empty MediaWiki Message*

--- a/Mad'jaranman_lidnad.mw
+++ b/Mad'jaranman_lidnad.mw
@@ -102,7 +102,7 @@
 | [[Šomod' (agj)|Šomod']]
 | 5932
 |-
-| '''[[Balatonfel'dvar]]'''
+| '''[[Balatonföl'dvar]]'''
 | [[Suvidunajantagaine rand]]
 | [[Šomod' (agj)|Šomod']]
 | 2064
@@ -612,7 +612,7 @@
 | [[Sabol'č Satmar Bereg]]
 | 6842
 |-
-| '''[[Igal]]'''
+| '''[[Igal']]'''
 | [[Suvidunajantagaine rand]]
 | [[Šomod' (agj)|Šomod']]
 | 1308
